force-app/main/default/objects/Related_Intelligence_Report__c/Related_Intelligence_Report__c.object-meta.xml
<CustomObject>
    <label>Related Intelligence Report</label>
    <nameField>
        <displayFormat>RR-{YYYY}-{0}</displayFormat>
        <label>Related IR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Intelligence Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>