force-app/main/default/objects/Related_Intelligence_Report__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <formula>TEXT(Intelligence_Report__r.Activity__c)</formula>
    <label>Activity</label>
    <type>Text</type>
</CustomField>