force-app/main/default/objects/Related_Intelligence_Report__c/fields/Activity_P__c.field-meta.xml
<CustomField>
    <fullName>Activity_P__c</fullName>
    <formula>TEXT(Primary_Intelligence_Report__r.Activity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity</label>
    <type>Text</type>
</CustomField>