force-app/main/default/objects/Related_Intelligence_Report__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>Intelligence_Report__r.CreatedDate</formula>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>