force-app/main/default/objects/Related_Intelligence_Report__c/fields/Created_Date_P__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_P__c</fullName>
    <formula>Primary_Intelligence_Report__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>