force-app/main/default/objects/Related_Intelligence_Report__c/fields/Intelligence_Report__c.field-meta.xml
<CustomField>
    <fullName>Intelligence_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intelligence Report 2</label>
    <referenceTo>Tips_Intel__c</referenceTo>
    <relationshipLabel>Related Intelligence Reports (2)</relationshipLabel>
    <relationshipName>Related_Intelligence_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>