force-app/main/default/objects/Related_Intelligence_Report__c/fields/Narrative_P__c.field-meta.xml
<CustomField>
    <fullName>Narrative_P__c</fullName>
    <formula>Primary_Intelligence_Report__r.Narrative_TA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Narrative</label>
    <type>Text</type>
</CustomField>