force-app/main/default/objects/Related_Intelligence_Report__c/fields/Primary_Intelligence_Report__c.field-meta.xml
<CustomField>
    <fullName>Primary_Intelligence_Report__c</fullName>
    <label>Intelligence Report 1</label>
    <referenceTo>Tips_Intel__c</referenceTo>
    <relationshipLabel>Related Intelligence Reports (1)</relationshipLabel>
    <relationshipName>Related_Intelligence_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>